syntax = "proto3";

package com.road.yishi.proto.qq;

message DaWanKaReq {
  int32 type = 1;
  int32 grade = 2;
}
